@@ -4,6 +4,7 @@ git-annex (3.20110820) UNRELEASED; urgency=low
     configured first. Closes: #638998
   * The wget command will now be used in preference to curl, if available.
   * init: Make description an optional parameter.
+  * unused, status: Sped up by avoiding unnecessary stats of annexed files.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 23 Aug 2011 13:41:01 -0400
 
